2006-07-05  Roland Clobus <rclobus@bigfoot.com>
	* docs/README.release: Update steps for a release
	
2006-06-23  Roland Clobus <rclobus@bigfoot.com>
	* getVersions.sh: View the versions in the various distributions
	
2006-06-06  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.64
	* Subversion commit date: 2006-06-19
	
2006-06-06  Roland Clobus <rclobus@bigfoot.com>
	* server/main.c: Allow games with more than 3 victory points, when
	started from the commandline
	* server/trade.c: Restored to 0.9.52 version
	* Subversion commit date: 2006-06-19
	
2006-05-30  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.63
	
2006-05-30  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, client/gtk/quote.c, client/gtk/offline.c,
	client/common/client.h, client/common/callback.c: Minimum requirement
	is Glib 2.6 and Gtk+ 2.6. Remove use of Gtk+ 2.8 icon. Fixed compiler
	warnings

2006-05-28  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.62
	
2006-05-28  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/quote.c, client/gtk/trade.c, client/gtk/quote-view.c,
	client/gtk/quote-view.h: Rewrite of quote.c
	* server/trade.c: Throw away the quotes before ending the trade
	
2006-05-28  Bas Wijnen <shevek@fmf.nl>
	* client/callback.h, client/gtk/name.c, client/gtk/frontend.h,
	client/gtk/offline.c, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c,
	client/common/player.c, client/ai/ai.c: Separate requested name and
	viewerness from actual values during the game, add commandline-option
	to select meta-server in gtk client.

2006-05-27  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Moved legend, game settings and dice histgram from
	help to game menu.
	* client/gtk/offline.c, client/gtk/gui.c: Fixed the help. When an
	error occurs, show it in the chat log.

2006-05-26  Bas Wijnen <shevek@fmf.nl>