@@ -508,7 +508,7 @@ void player_build_add(gint player_num,
 	case BUILD_MOVE_SHIP:
 		/* This clause here to remove a compiler warning.
 		   It should not be possible to reach this code. */
-		g_error("Bug: unreachable code reached.\n");
+		g_error("Bug: unreachable code reached");
 		break;
 	}
 }
@@ -584,7 +584,7 @@ void player_build_remove(gint player_num,
 	case BUILD_MOVE_SHIP:
 		/* This clause here to remove a compiler warning.
 		   It should not be possible to reach this case. */
-		g_error("Bug: unreachable code reached.\n");
+		g_error("Bug: unreachable code reached");
 		break;
 	}
 }
