@@ -1123,7 +1123,7 @@ int main(int argc, char *argv[])
 		gtk_window_set_default_icon_from_file(icon_file, NULL);
 	} else {
 		/* Missing pixmap, main icon file */
-		g_warning(_("Pixmap not found: %s\n"), icon_file);
+		g_warning("Pixmap not found: %s", icon_file);
 	}
 	g_free(icon_file);
 
