@@ -1,3 +1,9 @@
+2006-07-05 Roland Clobus <rclobus@bigfoot.com>
+	* translation markup removed for g_error and g_warning messages
+
+2006-07-05 Ronny Standtke <Ronny.Standtke@gmx.net>
+	* POTFILES.in: added missing quote-view.c
+	
 2006-06-23 Daniel Nylander <po@danielnylander.se>
 	* sv.po: Updated for 0.9.64
 
